--- a/www/index.html
+++ b/www/index.html
@@ -34,30 +34,23 @@
         style-src 'self'  https://fonts.googleapis.com 'unsafe-inline';
         font-src 'self' https://fonts.gstatic.com 'unsafe-inline';
         media-src *;
-        img-src 'self' https://hycon.io data: content:;
-        connect-src https://network.hycon.io https://wallet.hycon.io https://api.coingecko.com;">
+        img-src 'self' https://hycon.io https://images.unsplash.com data: content:;
+        connect-src https://network.hycon.io https://wallet.hycon.io https://api.coingecko.com http://34.214.118.180:3000;">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
-    <meta 
-        name="viewport" 
-        content="user-scalable=no, initial-scale=1, viewport-fit=auto"
-    >
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, viewport-fit=cover">
     <meta charset="UTF-8" />
     <title>Hycon Wallet</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Nanum+Gothic:400,700|Source+Sans+Pro:400,700&amp;subset=korean">
 </head>
 
-<body style="
-        background-color: #FFF;
-    ">
-    <section 
-        id="blockexplorer" 
-        style="
-            min-height: 100%; 
-            display: flex; 
-            flex-direction: column; 
-            background-color: #FFF;
+<body id="body" style="
+    height: 100%;">
+    <section id="blockexplorer" style="
+            min-height: 100%;
+            display: flex;
+            flex-direction: column;
             overflow-y: scroll;
             -webkit-overflow-scrolling: touch;" />
 
@@ -76,7 +69,6 @@
         }
     </script>
     <script type="text/javascript" src="js/bundle.js"></script>
-    <script type="text/javascript" src="js/plugins/LaunchMyApp.js"></script>
 
 </body>
 
